--- a/Impuls_iOS/Info.plist
+++ b/Impuls_iOS/Info.plist
@@ -21,13 +21,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>"See what isn't really there"</string>
+	<string>&quot;See what isn&apos;t really there&quot;</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>"Omar is stalking you"</string>
+	<string>&quot;Omar is stalking you&quot;</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>"Omar is stalking you"</string>
+	<string>&quot;Omar is stalking you&quot;</string>
 	<key>NSMotionUsageDescription</key>
-	<string>"I'm tracking your steps..."</string>
+	<string>&quot;I&apos;m tracking your steps...&quot;</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -40,8 +40,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
