--- a/Impuls_iOS/Info.plist
+++ b/Impuls_iOS/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Outdoors_impuls</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -21,13 +23,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>&quot;See what isn&apos;t really there&quot;</string>
+	<string>"See what isn't really there"</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>&quot;Omar is stalking you&quot;</string>
+	<string>"Omar is stalking you"</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>&quot;Omar is stalking you&quot;</string>
+	<string>"Omar is stalking you"</string>
 	<key>NSMotionUsageDescription</key>
-	<string>&quot;I&apos;m tracking your steps...&quot;</string>
+	<string>"I'm tracking your steps..."</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
